ThreadLocal, JVM Demo, JDK class loader